@@ -1,12 +1,36 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST stress-0.18.6.tar.gz 162798 SHA256 e69f78cfb0f956b087275c535f960c281430812243374bf13a784055a453d938 SHA512 870a86a2b67005d58cd14c68e97a66650dc314d7f0f4a0c6061d7fd571916650ec0f4a81d9117762ec489d8caac042d8271e15a303eff5ef45a17a3faea05a7e WHIRLPOOL 1474a41692bc905648a39ab0c3a844254f75e64deff154a8351feb8dce495774d6e65f9aafef262743ebd6a5c43f4fb13df5e1bd567e9ba3e65a5eadd02a8cb5
 DIST stress-1.0.0.tar.gz 178155 SHA256 778126fdcc3ecb54d4a8dad6164001603bcc3b79ba64b3c2c5285275bc0cbedf SHA512 e71f004f8351b6c29e161084eb5c5b5de78c8c2f7c90b0a3e3669ed35bce08443cb407db781b4291d6e929374cfd2fb8e1c114296f90500d9f22dd994290d8ac WHIRLPOOL 67c6dc89245ec4040e36a74c2cfc04c9bfd62bd202f8726b4b3e22b402dfe9a0eb020d6c12ad4b762c51316fdbd45c41cefc2cf57e426b71cce3bdd4b26c9668
 DIST stress-1.0.1.tar.gz 203343 SHA256 813a9c78d0a7c27e257ab4523f1b0013e32b0eceabc19154d7d26118e9b73bed SHA512 d7de86cab38a688d2fc55f26a9b3562d58a40ef30bbfa974b6777b6a7d7e1b1f609ef78258af2d1b8aee0bcda432d5abe4f59b9529ea2730e26a054d1683d666 WHIRLPOOL 89349408fbeb654fae162f0e5435264e426b63f7ab05f3199505ded530ab5bb6c426a61440c5ecce34ea07641615a7b38c5d0c35abdb43153b6d9f71c0049c96
 DIST stress-1.0.3.tar.gz 201376 SHA256 078e63ce88ebb78d0953954b6aaf2d55c6fdc0e6c778f7ad11af3863af941d03 SHA512 21072ef4eff0f689a363fc5350775c162ed34c8c94ae7457a16550e2fcb428cbc9246be617f67c584f384cddfa27587a9f949bf1de34b11c3b97b8a3d589254c WHIRLPOOL 9cd4a73663e7c3374006ae43b2803c8b7f536da36d25709b97a404c46326fd8dbdd20c169ac0d45dde952087f78c727ac58479c2f934440cc468398fa19ffb76
+DIST stress-1.0.4-r1.tar.gz 191800 SHA256 057e4fc2a7706411e1014bf172e4f94b63a12f18412378fca8684ca92408825b SHA512 623a7d9585828bed4b7673e19fb0cfdda904552cd56353d74106047b64249299d5f8da892ec135f1781ec3984c7d5835dcc6c0d8e659e06c8a1e4fb2af9fd9c4 WHIRLPOOL f61eb216ec44242c74ae86b3c5390c361c16f4466cfad231d4fbfa93f61578c36dde779db3cf0ba8a0e0751b74fb33a1085372d825d9fd0ebb8120962e9f1cdf
 DIST stress-1.0.4.tar.gz 201495 SHA256 369c997f65e8426ae8b318d4fdc8e6f07a311cfa77cc4b25dace465c582163c0 SHA512 54b3f9edbdaff228f2cfd40a7ce324eea95fc9ab54194d3bac04dc67f72b690e4748c8ff5161bca563d7dd573609092c3631cd4cceb14d813f16f7226ad1ce98 WHIRLPOOL a1ca33b3c3c4ac3e5073a9ea5fa43fe4295bfa2c26627b36366e875dc9c2b1776493d6895ca40008037e2bf2246117067b23cfab568143f1e0e3ec759aa458ea
-EBUILD stress-0.18.6.ebuild 797 SHA256 bbe1b05ce37a34b5244c128f890b489872c8e9286b8bda6263d226831f86f178 SHA512 f2b238d931de7bcff24a8ee49a98e1088c552672961c3aa3edd96632078f9393f62877d8fa4b923fe5478b62c6a18bb3694242e213c59e2b944593d4af1c3498 WHIRLPOOL 14ca7f305aabc10465e29eb1ba9dd44643891640a28edc1728c783030e4a46a9f1b50b66671e7df1227d67265169f8d5feff7c154a457c2e38e79c6d882a90ed
-EBUILD stress-1.0.0.ebuild 1079 SHA256 4e8a262c5660914fe2a3d4517f7eaa78798593bda7e88c1911baf3ef632c3e29 SHA512 cc66487623f9b2100be00d5641f4a15bc2335df82fe44bb7e274f6368272c69ac359ffd3443408c3b266742e2af1131191f58ef9e1d90fcb8b7979e3ce167dcf WHIRLPOOL 5cb6fab567d32263dab69f277b3667c5cfece3c7ea1c93ba8e9233f2d220a1af94d3cf5691f640cccff1016ed59571dbcdaa4a161538ae956bcfcbfe8bd69bf0
-EBUILD stress-1.0.1.ebuild 1078 SHA256 2d9b296388ea6c753b5fa322d9bd30e35f309716951d85ecac154d5d908e4552 SHA512 a8a7853868d151f8fefc5673652deeef09b8c984f609a15b34bc61f965bd41c720985144f726db4dd658e72cc58267405d610299964cc035b11ed4e7c873280f WHIRLPOOL b6d7534855fc06e563e2eae1e8ae522ad27feab96789876a65655b4ba6b6594f7288efa217b19910fe01d9a82be6eb14c003e675b807dc54361e4bd171f4747c
-EBUILD stress-1.0.3.ebuild 1084 SHA256 75134dc28ffb02b90daa301243df1b0c3e9cce1fed3b800b5f1b09eafeb776d5 SHA512 3061d70cb8e4e576b769430201ccc0c53de522194409f7ec88db5e33b1872c5ecd44e83a530023b95df77a51af2a3f55a60a2f497ce2cd8d59a4a8a549251753 WHIRLPOOL aa628bb7139320b63cc48b1c2aa386a3368b803758ec411e84920ea984e6a268622c8b6d8d19696a6440f57f603c27a14e35f0eb305c08d8577b055852b86145
-EBUILD stress-1.0.4.ebuild 640 SHA256 32ff1a3dc7e9715fc17bffd3647feb1dac00f944e9c4cf6946379578d4a42cca SHA512 dbb82563eac462ca2b3f4c220423dc285ae27d394b5e256f428c3bc843c00f7e6a00ef761b868110f2dedefff5d73907083f5d81d55651eb918443710817b883 WHIRLPOOL 8c91de310d35bf680615a7b726afe0440875d3cfcdac7841ceeeb2924e346d746e5c0fd31c68d9fa0a58870ace6e1dfcf6bf9e99909f7750daa1c65290aaaaaf
-MISC ChangeLog 5821 SHA256 b96b4ebc2eea49006c048775e0a67410f885519a804272af9d159a9b4751ae40 SHA512 543af8ff450183497f6dbee8140333f073f705e9178bf9478c8f26ad37a2d76fe0933352c7bf820ed17ca343dbf71a3548c73be65ae1c1f0efff94235ccb5e5a WHIRLPOOL f070ee293ac7d513c3308d61c01a979d42e20f50248ac4781e74e06d165a1c860cea61558457862392f489af2e4cd6a910d19750839fc79a896b50f751cbd9d0
+EBUILD stress-0.18.6.ebuild 796 SHA256 436373762caa531a4e904fc22576f705621ad3ca7a0084af61c0c207f37d4598 SHA512 db8ba0937dffb87dfa6027c04009820f663e144652bebd8602b3a4ba6f6914e25baa354d20a80e9579fed8648094de6ac276442107e18df9f94604adbcc23321 WHIRLPOOL 6b09c6d703f4270501e9063188a17cd6a7f923ef4acd57cdbeac8280ef1d8607921a7b0bc507a311be1ea0aa9abc3bc8e432c5604dab5261978549a9caa1220a
+EBUILD stress-1.0.0.ebuild 1079 SHA256 1dcd2a0d94a21f8b1358356f616672dd79e093a9988b76e43078f94c184274b3 SHA512 6c090cb463f8801f9271dc7b949cc48786f76baca15bbbdcad976f60495c73fceaf0f907f694184abad6a0f8a5a7b4f3b12f3fccdf3aae21973d48909eddf15f WHIRLPOOL 8bc5c43f38a980882dd5dc2bfd9521331981b72b4b6769199b51aecfbd02c903a6e36a4ba00fb8813c664c38b2292849cfb9bb12a9ec232ad6eee840d610a8b0
+EBUILD stress-1.0.1.ebuild 1077 SHA256 841d7c964737b2d817dabbd8e7a74f35431f8b28da029865c046ff5046c32e11 SHA512 b9529ec7ee3cadc82a38c500968a3a28a6be35a117fd5f54266d3d6ac413fee7dc861bfccf17d67ec9dff3c971dc94549c97350eb687ecad6cd9a7018fd27ffa WHIRLPOOL 724ec81cb1d70fa5b1c56f1d70b583c685810b3b068a6f28f19b372a6ebc03eaa68d909e05b35e775a81fcbe9d9c3c85f3e571401570e579aa3bf0eca7dcda35
+EBUILD stress-1.0.3.ebuild 1083 SHA256 6f4141228402b3fc9ce9863e255b7757acc604be9d2aa611a122397458801b23 SHA512 ab3919ac68ff453759a84dcc7e1a0c3b74aa1b8f00ab615f06f37d99c31a7a1f66c79144d7425e6f43b0c8b7fc4cac42116c633659f06e3f2a9703141e6d8b15 WHIRLPOOL d273a927ad6811b76ecd58b819c31ad38d2922e727342add287713eba064ec82ea9afb1ac0dd71ca81e3ee6d307ac1fd6fbbb5bc15e03636bf896778e8fabaa8
+EBUILD stress-1.0.4-r1.ebuild 665 SHA256 8f303a23cbd78de6cdc063206ae9c4d57a55a25dc0d1ed41b59de66d4a42bbd4 SHA512 81178cde511fab5ed6f116b15e456785ed382630b4e76eb9d95ab8035ed0c7bad69ae630ae7de9a4f84d3a03d112d61af48f5945b0c28b44252907b4e67c82f4 WHIRLPOOL a0ec6bb36151f69c2c939f21ae2e84644154607ad43a6b36cfa88ae6584493b8c13d71a44589537552cc6f398c6b531670d3a02c6af64caf05e0b117c6099c1c
+EBUILD stress-1.0.4.ebuild 639 SHA256 1d00e34f85b3918b53f66d1913c1a877fd7252a6a559c9f84c74b6cdbeac404d SHA512 38cfefdb3cb876aba16d788f706dd6760740cccad0b6ded81ec9c90aa126781e4203f6718c9f005200a1d5f2b3e7867008b6338dce8155612a1685977d76cdba WHIRLPOOL 276ac4948380f31f002c6b279898c3dd2a84cbde09f9805428b225e4b509bc5527169bc0fb6aec71303bceb7220b48799ea3d99e2de23b8fc1ae96c7f1e6b106
+MISC ChangeLog 6197 SHA256 8ee029c0b786297d23188e03deea24586cd32ebcd31530235c214a828fa4be7d SHA512 57709813b1f579986132cfd5a977f0c6ef8a5de4d89e2838252aad2b4cf7beda5ed4a4677acda073b33a2a71d723a4df7caffbaee24f53887b8abfaaf6946d41 WHIRLPOOL 9b6bd42215ffb22b7406a62b07979642bd23b5cfd05ea35b93dd738a7e4d28fa617cecb2f57235d7d61bf64369b503ac1a1f0120fcba200c84603e7b9137c2fc
 MISC metadata.xml 164 SHA256 d1c053798bce14287e6955dac28fa5fc6c7415449545b2922f4d30fe4d84894c SHA512 a6a94663f191b6f40b376d4c5a662f175822231aee7acaddbdb43d521d6df75180245c962ee55d8cc585aa57bbe37cf90291b1ac777bd18146a0510877711c1c WHIRLPOOL 4edd8ef824db45c3717914b2e5f9e856b578a37fdcb34f5fb5a2c053c0262d32a855828a182cc7733e58b12dd6386b26f6a21fca652ac991e73addd45ce021e9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJU6c8FXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOuGgP/3MhPH6LQHd7Dnf0KVv6Uhx4
+YMRYNmC331YKVs5dgmji/Qy1O6xrR2Co761T8gQvEUUUX+aVxxhKZicKzkPwijcu
+jC8/BjWyIZGkLFYGV1uMfN7wcgQqzSNbSyEojNdHUn/wW5GhLaHk3bhyRe67oOCY
+fAYIpSKExNCBAaJR0M+2lwjMufsk3fCHaFppUHx2zwPWCkT4D5vATGylEB/Acpcw
+DYKAta0Pz11F8dE4c72dt+1PPGIEwjOGcxjy7fSbs5adEAZAYmoEgNSIiAw1gH6K
+t4VAno4LRrMTSa//BTYv4K49a0xfDOmb8Jp04aB0nRyqyYvIH0nVM2dCl/bNup6J
+0GANCV0cxkFw0H8rQG/6HeKpzEtcjVfgBntZ0VkumILCEQ7wSEghQVLRSjQ8w7lx
+FB+b5QC1keD8WHsN3HVkQVjSZVUp/ZESimStP4jp725443NUNpAsVM83WEPqgtMy
+6jPnaTFpbBFYKD31tiZAd/k/zsTYGl3MNYAkEDAvT0F1tE6Lz/zoVkcKntADPu2o
+lM8MGb/yKr/y0M5DDVWCWrM7yha+Nimar2eh2WLNd44xZgID8WJThZ2FYEy7ZE1f
+Htuud6Yf9nTDgdt3NolQaCTBXsrebn3KYf1o5H5kKY7Z/N8D271BvV05D8gBcxxB
+ELmrQJV1ChqNbPJxq8V2
+=frxA
+-----END PGP SIGNATURE-----
