@@ -1,11 +1,11 @@
 DEFINED_PHASES=compile install unpack
 DEPEND=sys-apps/help2man !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13 >=sys-devel/automake-1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Imposes stressful loads on different aspects of the system
-HOMEPAGE=http://weather.ou.edu/~apw/projects/stress
+HOMEPAGE=http://people.seas.harvard.edu/~apw/stress
 IUSE=static
 KEYWORDS=amd64 arm ~mips ppc ppc64 sparc x86
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=http://weather.ou.edu/~apw/projects/stress/stress-1.0.1.tar.gz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=840a1ee3a9e1484e0431668cb05692e9
+_md5_=fef933398a655c09b65a23c6d90c622b
