@@ -1,11 +1,11 @@
 DEFINED_PHASES=prepare
 DESCRIPTION=Imposes stressful loads on different aspects of the system
 EAPI=4
-HOMEPAGE=http://weather.ou.edu/~apw/projects/stress
+HOMEPAGE=http://people.seas.harvard.edu/~apw/stress
 IUSE=static
 KEYWORDS=amd64 ~arm ~mips ~ppc ~ppc64 ~sparc x86
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=http://weather.ou.edu/~apw/projects/stress/stress-1.0.4.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=47a93ad97859bbeb027058b4bd8a4e2e
+_md5_=6b2f98c288e933a94eb21bdfb991097b
