@@ -1,10 +1,11 @@
-DEFINED_PHASES=compile install
+DEFINED_PHASES=prepare
 DESCRIPTION=Imposes stressful loads on different aspects of the system
+EAPI=5
 HOMEPAGE=http://people.seas.harvard.edu/~apw/stress
 IUSE=static
-KEYWORDS=amd64 ~mips ppc ppc64 ~sparc x86
-LICENSE=GPL-2
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-3
 SLOT=0
-SRC_URI=http://weather.ou.edu/~apw/projects/stress/stress-0.18.6.tar.gz
+SRC_URI=http://people.seas.harvard.edu/~apw/stress/stress-1.0.4.tar.gz -> stress-1.0.4-r1.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=730c09bb010c83ea1017cf787004e4a5
+_md5_=0d8292a173f6ff0f012f38b829767b1c
